update de color

--- a/estilos.css
+++ b/estilos.css
@@ -12,7 +12,7 @@
     font-size: 40px;
     font-family: 'Montserrat', sans-serif;
     width: 540px;
-    background-color: lightcoral;
+    background-color: aquamarine;
     border-radius: 5px;
     margin-top: 40px;
 }
